# inbox-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  channels.yaml.example  docker-compose.yml  git-manager.yml  package.json  pnpm-lock.yaml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  git-manager-ci.yml
alembic/: env.py
alembic/versions/: 8852af085998_initial_schema.py  b7d4c1e9a2f0_add_article_archive_events.py
docs/: optimization-plan.md  parity-checklist.md
docs/adr/: 0002-local-git-article-archive.md  0003-react-operations-console.md  README.md
openspec/changes/add-article-markdown-archive/: tasks.md
openspec/changes/add-github-cicd/: tasks.md
openspec/changes/add-github-stars-source/: design.md  (+2 more)
scripts/: article-archive.mjs  github-askpass.sh  import_credentials.py  init_bilibili_baseline.py  init_x_baseline.py  repair-article-frontmatter.mjs
src/inboxserver/: __init__.py  main.py
tests/: conftest.py
tests/e2e/: test_zhihu_login_scrape.py
tests/integration/: test_api_endpoints.py  test_article_archive_event_repo.py  test_defuddle_node_bridge.py  test_management_endpoints.py  test_repair_article_frontmatter.py  test_sync_pipeline.py  test_sync_run_tracking.py  test_worker_consume.py  test_worker_heartbeat.py
tests/unit/: test_article_archive_config.py  test_channels_config.py  test_deployment_files.py  test_scheduler.py
web/: index.html  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
(+149 files in other folders)
